Added studyTimer routes
